# CCB_zkVM

./: .gitignore  Cargo.toml
.github/workflows/: foundry-test.yml  prove.yml
contracts/: deployment_memo.txt
contracts/src/: DWBTC.sol  Test_DWBTC.sol  ZKBTC.sol  zkWBTC.sol
contracts/src/fixtures/: groth16-fixture.json  groth16-fixture_burn.json  groth16-fixture_burn_2.json  groth16-fixture_mint.json  plonk-fixture.json
contracts/test/: DWBTC.t.sol  Fibonacci.t.sol  ZKBTC.t.sol
contracts/zkout/DWBTC.sol/: DWBTC.json
contracts/zkout/ISP1Verifier.sol/: ISP1Verifier.json  ISP1VerifierWithHash.json
contracts/zkout/Test_DWBTC.sol/: Test_DWBTC.json
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: burn.rs  main.rs  mint.rs
script/: Cargo.toml
