[package]
name = "bitcoin_verify_program"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = "0.7.7"
sp1-zkvm = "4.1.7"
serde = { version = "1.0", features = ["derive"] }
lib_struct= { path = "../lib" }     
hex="0.4"
sha2 = "0.10"
bitcoin = "0.32.5"

