[package]
name = "bitcoin_verify_script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "0.2", features = ["prove", "execute"] }  # SP1 SDK for proving/executing
clap = { version = "4.4", features = ["derive"] }              # For CLI parsing
bincode = "1.3"                                                # For serialization
dotenv = "0.15"                                                # For environment variables
log = "0.4"                                                    # For logging

[dev-dependencies]
criterion = "0.5"  # Optional, for benchmarking if needed

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "bitcoin_verify_script"
path = "src/main.rs"